hugr-core/src/snapshots/hugr_core__package__test__module.snap
---
source: hugr-core/src/package.rs
expression: hugr.mermaid_string()
---
graph LR
    subgraph 0 ["(0) Module"]
        direction LR
        1["(1) FuncDecl: #quot;test#quot;"]
    end
